--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,9 +4,10 @@ project:
 
 # Navigation
 website:
-#  title: "treinmund.github.io"
+#  title: Put site title here
   navbar:
     background: primary
+    search: false
     left:
       - href: index.qmd
         text: Home
