--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,8 @@ website:
         text: Home
       - href: about.qmd
         text: About
+      - href: hai-bibliography.qmd
+        text: Human-AI Interaction
 
 # Appearance
 format:
